force-app/main/default/objects/RE_Covamo_FS_Products__c/RE_Covamo_FS_Products__c.object-meta.xml
<CustomObject>
    <label>Covamo FS Product</label>
    <nameField>
        <displayFormat>FSP-{000}</displayFormat>
        <label>Covamo FS Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covamo FS Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>