force-app/main/default/objects/RE_Covamo_FS_Products__c/fields/Expected_Premium_Price_Out__c.field-meta.xml
<CustomField>
    <fullName>Expected_Premium_Price_Out__c</fullName>
    <label>Expected Premium Price Out</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>