force-app/main/default/objects/RE_Covamo_FS_Products__c/fields/RE_Covamo_FS__c.field-meta.xml
<CustomField>
    <fullName>RE_Covamo_FS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Covamo FS</label>
    <referenceTo>Rev_Covamo_FS__c</referenceTo>
    <relationshipLabel>Covamo FS Products</relationshipLabel>
    <relationshipName>Covamo_FS_Products</relationshipName>
    <type>Lookup</type>
</CustomField>