force-app/main/default/objects/RE_Covamo_FS_Products__c/fields/RE_Product__c.field-meta.xml
<CustomField>
    <fullName>RE_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RE Product</label>
    <referenceTo>RE_Product__c</referenceTo>
    <relationshipLabel>Covamo FS Products</relationshipLabel>
    <relationshipName>Covamo_FS_Products</relationshipName>
    <type>Lookup</type>
</CustomField>