force-app/main/default/objects/RE_Covamo_FS_Products__c/fields/RE_Product_Volume__c.field-meta.xml
<CustomField>
    <fullName>RE_Product_Volume__c</fullName>
    <label>Product Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>